[gd_scene load_steps=9 format=3 uid="uid://ghoy250tn2c"]

[ext_resource type="Script" path="res://scripts/travel_scripts/travel_demo.gd" id="1_3i7iu"]
[ext_resource type="PackedScene" uid="uid://bpsv4jbxw7hb6" path="res://scenes/torino.tscn" id="1_ryj78"]
[ext_resource type="Script" path="res://scripts/travel_scripts/event_manager.gd" id="3_vrvfb"]
[ext_resource type="Script" path="res://scripts/state_machine.gd" id="4_y6kns"]
[ext_resource type="Script" path="res://scripts/travel_idle.gd" id="5_6y15q"]
[ext_resource type="Script" path="res://scripts/travel_moving.gd" id="5_j7nyt"]
[ext_resource type="Script" path="res://scripts/travel_damage.gd" id="6_nd515"]
[ext_resource type="Script" path="res://scripts/travel_event.gd" id="7_l4q71"]

[node name="TravelDemo" type="Node2D"]
script = ExtResource("1_3i7iu")
DIST_TO = 320
TIMER = 1.0
BASE_DIST = 30
SPEED = 1.75
R_E_CH = 40.0
AREA_MOD = 1.0
COND_MOD = 1.0

[node name="Torino" parent="." instance=ExtResource("1_ryj78")]

[node name="Button" type="Button" parent="."]
offset_left = 636.0
offset_top = 350.0
offset_right = 815.0
offset_bottom = 416.0
text = "Travel"

[node name="EventManager" type="Node" parent="."]
script = ExtResource("3_vrvfb")

[node name="EventNode" type="Control" parent="EventManager"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="EventManager/EventNode"]
layout_mode = 0
offset_left = 203.0
offset_top = 192.0
offset_right = 541.0
offset_bottom = 316.0
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="EventManager/EventNode/ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.118
anchor_bottom = 0.093
offset_left = 33.0
offset_top = 29.0
offset_right = 261.116
offset_bottom = 77.468
text = "Event Text"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="DistToLabel" type="Label" parent="."]
offset_left = 641.0
offset_top = 288.0
offset_right = 737.0
offset_bottom = 311.0
text = "Distance to: "

[node name="TravelStateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("4_y6kns")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="TravelStateMachine"]
script = ExtResource("5_6y15q")

[node name="Moving" type="Node" parent="TravelStateMachine"]
script = ExtResource("5_j7nyt")

[node name="Damage" type="Node" parent="TravelStateMachine"]
script = ExtResource("6_nd515")

[node name="Event" type="Node" parent="TravelStateMachine"]
script = ExtResource("7_l4q71")

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
